[package]
name = "heatwave"
version = "0.1.0"
edition = "2021"
authors = ["FloralSoda <lilysoda@pm.me>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "heatwave"
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
winit = { version="0.29", features = ["rwh_06" ]}
pollster = "0.3"
bytemuck = { version="1", features=["derive"]}
image = { version="0.24", features=["png"], default-features = false}
raw-window-handle = "0.6"
cfg-if = "1"
bitflags = "2"


[dev-dependencies]
inventory = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
